gl33-master/src/test/deca/context/invalid/other/operations_int_boolean.deca
// Invalid test
// Opérations sur les int et les boolean ensemble

{
    int n;
    int m;
    boolean a;

    n = m + a;
}
